--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rowolff/rowshook#readme",
   "devDependencies": {
+    "async": "^2.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^22.4.3",
@@ -32,6 +33,7 @@
     "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "google-spreadsheet": "^2.0.4",
     "jest": "^22.4.3",
     "morgan": "^1.9.0"
   }
