Fix linter errors

--- a/package.json
+++ b/package.json
@@ -23,18 +23,29 @@
   },
   "homepage": "https://github.com/rowolff/rowshook#readme",
   "devDependencies": {
-    "async": "^2.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "body-parser": "^1.18.2",
-    "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
-    "express": "^4.16.3",
-    "google-spreadsheet": "^2.0.4",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
-    "morgan": "^1.9.0"
+    "prettier": "^1.12.1"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "body-parser": "^1.18.2",
+    "morgan": "^1.9.0",
+    "google-spreadsheet": "^2.0.4",
+    "async": "^2.6.0",
+    "dotenv": "^5.0.1"
+    
   }
 }
