--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "babel src -d lib",
     "local": "NODE_ENV=development node lib/app.js",
-    "start": "node lib/app.js"
+    "start": "npm run build && node lib/app.js"
   },
   "repository": {
     "type": "git",
