I give up, here I'm committing the build

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "build/app.js",
   "scripts": {
     "test": "jest",
-    "clean": "rm -rf ./app/build && mkdir app/build",
-    "build-babel": "babel -d ./app/build ./src -s",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
-    "start": "npm run build && node ./app/build/app.js",
-    "local": "NODE_ENV=development node lib/app.js"
+    "start": "npm run build && node ./build/app.js",
+    "local": "NODE_ENV=development node build/app.js"
   },
   "repository": {
     "type": "git",
